[package]
name = "stumpless"
description = "Sends log information to a variety of destinations, either local or remote."
version = "0.0.0"
authors = ["Joel Anderson <joelanderson3@yahoo.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.3", features = ["cargo"] }
libc = "0.2.117"

[build-dependencies]
bindgen = "0.59.2"
cmake = "=0.1.45"
