[package]
name = "stumpless"
description = "Sends log information to a variety of destinations, either local or remote."
version = "0.0.0"
authors = ["Joel Anderson <joelanderson333@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.3", features = ["cargo"] }
stumpless-sys = { version = "0.0.0", path = "../stumpless-sys" }
